# cg_homework

./: CMakeLists.txt  README.md  cg.cpp  cg.h  circle.cpp  line.cpp  main.cpp  polygon.cpp
head/: cg.h
source/: cg.cpp  circle.cpp  line.cpp  polygon.cpp
